--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.error{
+    color: red;
+    display: inline-block;
+    margin: 3px 0px;
+}
